(Install)add some package body-parser and remove it Add axios package to handle AJAX request

--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0"
-  }
+  "dependencies": {}
 }
