(Build)Install express session to handle user session for connexion

--- a/api/package.json
+++ b/api/package.json
@@ -10,5 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "express-session": "^1.16.2"
+  }
 }
