(Build)remove installed package express-session

--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express-session": "^1.16.2"
-  }
+  "dependencies": {}
 }
